# kuzmina_kv_oop

./: CMakeLists.txt  README.md  random.cpp
bin.dbg/: main  new_delete  nomer1  nomer2  nomer3  number1  number2  number3  share  strateg  unique  weak
laba/: CMakeLists.txt  new_delete.cpp  share.cpp  unique.cpp  weak.cpp
laba/new_delete.dSYM/Contents/Resources/DWARF/: new_delete
laba/new_delete.dSYM/Contents/Resources/Relocations/aarch64/: new_delete.yml
laba4/: CMakeLists.txt  number1  number1.cpp  number2  number2.cpp  number3  number3.cpp
laba5/: CMakeLists.txt  nomer1.cpp  nomer2.cpp  nomer3.cpp
laba6/: CMakeLists.txt  strateg.cpp  strateg.hpp
src/: CMakeLists.txt  main  main.cpp  utils.cpp
